# sumi

./: .gitignore  CLAUDE.md  DEPLOY.md  README.md
backend/: Dockerfile  pyproject.toml
backend/scripts/: benchmark_image_providers.py  benchmark_llm_providers.py  benchmark_model_quality.py  benchmark_pipeline_phase.py  compare_models.py  generate_samples.py  generate_thumbnails.py
backend/sumi/: config.py  db.py  main.py
backend/sumi/api/: auth.py  feedback.py  generate.py  history.py  monitor.py  references.py  router.py  schemas.py  styles.py  upload.py
backend/sumi/catalog/: styles.py
backend/sumi/catalog/data/: catalog.yaml
backend/sumi/catalog/data/guides/: art-nouveau.md  ukiyo-e.md
backend/sumi/engine/: combination_recommender.py  content_analyzer.py  content_structurer.py  content_synthesizer.py  ideogram_generator.py  image_generator.py  imagen_generator.py  pipeline.py  prompt_crafter.py  style_recommender.py
backend/sumi/feedback/: __init__.py  categorizer.py  code_generator.py  github_integration.py  manager.py  models.py  pipeline.py
backend/sumi/jobs/: manager.py  models.py
backend/sumi/llm/: client.py  prompts.py
backend/sumi/references/: loader.py
backend/sumi/references/data/styles/: adobe-slide.md  aged-academia.md  airline-travel-poster.md  art-nouveau-mucha.md  art-nouveau.md  atomic-age.md  axonometric.md  bauhaus.md  botanical-illustration.md  chalkboard.md  charley-harper.md  claymation.md  constructivism.md  corporate-memphis.md  craft-handmade.md  cubism.md  daniel-clowes.md  de-stijl.md  (+39 more)
backend/sumi/storage/: local.py
(+101 files in other folders)
